{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 107,
  "lineage": "3101f2d7-d763-53d8-47a7-db52b74969d6",
  "resources": [
    {
      "module": "module.ec2_instance-public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2e47f3b2e23d235",
            "arn": "arn:aws:ec2:us-east-2:605459964761:instance/i-0c0eb321a58d33325",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0eb321a58d33325",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakeys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08509eae911260206",
            "private_dns": "ip-10-0-101-100.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.100",
            "public_dns": "ec2-18-220-194-199.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.194.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032eb2a343d2d5078",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d22f34203b48fee1",
            "tags": {
              "Environment": "stage",
              "Name": "Dev-stage-bastion-host",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Dev-stage-bastion-host",
              "owners": "Dev"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Dev-stage-bastion-host"
            },
            "vpc_security_group_ids": [
              "sg-0b88328792006cb70"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.rehl",
            "data.aws_availability_zones.azs",
            "module.ec2_instance-public.aws_iam_instance_profile.this",
            "module.ec2_instance-public.data.aws_ssm_parameter.this",
            "module.first-complete-vpc.aws_subnet.public",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private-db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2e47f3b2e23d235",
            "arn": "arn:aws:ec2:us-east-2:605459964761:instance/i-019f34ffc96eb67ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019f34ffc96eb67ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrakeys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074fd24512bca7662",
            "private_dns": "ip-10-0-1-247.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001b25863ce4b0004",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e004800fb10072d2",
            "tags": {
              "Environment": "stage",
              "Name": "Dev-stage-db",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Dev-stage-db",
              "owners": "Dev"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Dev-stage-db"
            },
            "vpc_security_group_ids": [
              "sg-0cafa75d3c38a28dc"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.rehl",
            "data.aws_availability_zones.azs",
            "module.ec2_private-db.aws_iam_instance_profile.this",
            "module.ec2_private-db.data.aws_ssm_parameter.this",
            "module.first-complete-vpc.aws_subnet.private",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003a1ef2773d5048b",
            "association_id": "eipassoc-0cd484dd8369a13ba",
            "domain": "vpc",
            "id": "eipalloc-003a1ef2773d5048b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-011984185d8abb81f",
            "private_dns": "ip-10-0-101-205.us-east-2.compute.internal",
            "private_ip": "10.0.101.205",
            "public_dns": "ec2-3-133-70-78.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.70.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-us-east-2a",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-us-east-2a",
              "owners": "Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:internet-gateway/igw-09ef5ef10026f08d2",
            "id": "igw-09ef5ef10026f08d2",
            "owner_id": "605459964761",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage",
              "owners": "Dev"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003a1ef2773d5048b",
            "connectivity_type": "public",
            "id": "nat-0eb6cfe922cac1f57",
            "network_interface_id": "eni-011984185d8abb81f",
            "private_ip": "10.0.101.205",
            "public_ip": "3.133.70.78",
            "subnet_id": "subnet-0d22f34203b48fee1",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-us-east-2a",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-us-east-2a",
              "owners": "Dev"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_eip.nat",
            "module.first-complete-vpc.aws_internet_gateway.this",
            "module.first-complete-vpc.aws_subnet.public",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-040efafd3e61972f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eb6cfe922cac1f57",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040efafd3e61972f0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_eip.nat",
            "module.first-complete-vpc.aws_internet_gateway.this",
            "module.first-complete-vpc.aws_nat_gateway.this",
            "module.first-complete-vpc.aws_route_table.private",
            "module.first-complete-vpc.aws_subnet.public",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09ef5ef10026f08d2",
            "id": "r-rtb-0fae36db6758715de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fae36db6758715de",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.first-complete-vpc.aws_internet_gateway.this",
            "module.first-complete-vpc.aws_route_table.public",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:route-table/rtb-0a8596f447e8c7ac5",
            "id": "rtb-0a8596f447e8c7ac5",
            "owner_id": "605459964761",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-db",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-db",
              "owners": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:route-table/rtb-040efafd3e61972f0",
            "id": "rtb-040efafd3e61972f0",
            "owner_id": "605459964761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb6cfe922cac1f57",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-private",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-private",
              "owners": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:route-table/rtb-0fae36db6758715de",
            "id": "rtb-0fae36db6758715de",
            "owner_id": "605459964761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ef5ef10026f08d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-public",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-public",
              "owners": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a519b3a8aa1cec2",
            "route_table_id": "rtb-0a8596f447e8c7ac5",
            "subnet_id": "subnet-05b06e7693882a333"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_route_table.database",
            "module.first-complete-vpc.aws_route_table.private",
            "module.first-complete-vpc.aws_subnet.database",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e9b1051c1225190",
            "route_table_id": "rtb-0a8596f447e8c7ac5",
            "subnet_id": "subnet-0dc3cdf158026d65f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_route_table.database",
            "module.first-complete-vpc.aws_route_table.private",
            "module.first-complete-vpc.aws_subnet.database",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f40b6c92f769a18d",
            "route_table_id": "rtb-040efafd3e61972f0",
            "subnet_id": "subnet-0e004800fb10072d2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_route_table.private",
            "module.first-complete-vpc.aws_subnet.private",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e138807447c02726",
            "route_table_id": "rtb-040efafd3e61972f0",
            "subnet_id": "subnet-068142d0741c95ff9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_route_table.private",
            "module.first-complete-vpc.aws_subnet.private",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012e621f9b1b418e5",
            "route_table_id": "rtb-0fae36db6758715de",
            "subnet_id": "subnet-0d22f34203b48fee1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_route_table.public",
            "module.first-complete-vpc.aws_subnet.public",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49d850d7dc6b263",
            "route_table_id": "rtb-0fae36db6758715de",
            "subnet_id": "subnet-06f173d2a3b31fce4"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_route_table.public",
            "module.first-complete-vpc.aws_subnet.public",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:subnet/subnet-05b06e7693882a333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b06e7693882a333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605459964761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-db-us-east-2a",
              "owners": "Dev",
              "type": "database-subnets"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-db-us-east-2a",
              "owners": "Dev",
              "type": "database-subnets"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:subnet/subnet-0dc3cdf158026d65f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc3cdf158026d65f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605459964761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-db-us-east-2b",
              "owners": "Dev",
              "type": "database-subnets"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-db-us-east-2b",
              "owners": "Dev",
              "type": "database-subnets"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:subnet/subnet-0e004800fb10072d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e004800fb10072d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605459964761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-private-us-east-2a",
              "owners": "Dev",
              "type": "private-subnets"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-private-us-east-2a",
              "owners": "Dev",
              "type": "private-subnets"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:subnet/subnet-068142d0741c95ff9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068142d0741c95ff9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605459964761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-private-us-east-2b",
              "owners": "Dev",
              "type": "private-subnets"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-private-us-east-2b",
              "owners": "Dev",
              "type": "private-subnets"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:subnet/subnet-0d22f34203b48fee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d22f34203b48fee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605459964761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-public-us-east-2a",
              "owners": "Dev",
              "type": "public-subnets"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-public-us-east-2a",
              "owners": "Dev",
              "type": "public-subnets"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:subnet/subnet-06f173d2a3b31fce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f173d2a3b31fce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605459964761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage-public-us-east-2b",
              "owners": "Dev",
              "type": "public-subnets"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage-public-us-east-2b",
              "owners": "Dev",
              "type": "public-subnets"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.first-complete-vpc.aws_vpc.this",
            "module.first-complete-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.first-complete-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:vpc/vpc-08793edf5d45b3abb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023444b2ee2814598",
            "default_route_table_id": "rtb-00e7b224f33152ee2",
            "default_security_group_id": "sg-0cafa75d3c38a28dc",
            "dhcp_options_id": "dopt-0b0390e0c660a86e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08793edf5d45b3abb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e7b224f33152ee2",
            "owner_id": "605459964761",
            "tags": {
              "Environment": "stage",
              "Name": "myvpc-stage",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "myvpc-stage",
              "owners": "Dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:605459964761:security-group/sg-0b88328792006cb70",
            "description": "Security group for the bastion host with HTTP SSH port open from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b88328792006cb70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Dev-stage-public-bastion-sg-20230124060122747400000001",
            "name_prefix": "Dev-stage-public-bastion-sg-",
            "owner_id": "605459964761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "Dev-stage-public-bastion-sg",
              "owners": "Dev"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Dev-stage-public-bastion-sg",
              "owners": "Dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08793edf5d45b3abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.first-complete-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3655442885",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b88328792006cb70",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.first-complete-vpc.aws_vpc.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1036179950",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b88328792006cb70",
            "security_group_rule_id": "sgr-024182aef71db3f96",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.first-complete-vpc.aws_vpc.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}